aroundme page: layout fix for list view on small screens

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9794,6 +9794,26 @@ Around me page styling
   }
 }
 
+/* small screen fix for list items */
+
+@media (max-width: 400px) {
+  .item-list .item-content .list-item-img {
+    min-width: 95px;
+  }
+
+  .item-list .item-content .caption .list-item-name {
+    font-size: 16px;
+  }
+
+  .item-list .item-content .caption .list-item-distance {
+    font-size: 12px;
+  }
+
+  .item-list .item-content .caption .list-item-intro {
+    font-size: 12px;
+  }
+}
+
 @media (max-width: 768px) {
   .searchButtonRadiusFix {
     border-bottom-right-radius: 0px !important;
